# SBO-MCP-HANA

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt
scripts/: install.bat  start-all.bat
src/sap_mcp/: __init__.py  __main__.py  config.py  config_wizard.py  csv_utils.py  server.py
src/sap_mcp/connectors/: __init__.py  base.py  hana.py  odbc.py
src/sap_mcp/tools/: __init__.py  get_columns.py  get_tables.py  run_query.py
tests/: __init__.py  test_config.py  test_csv_utils.py
